--- a/PHTBASE.html
+++ b/PHTBASE.html
@@ -1,4 +1,4 @@
-<BASE HREF=""/>
+<BASE HREF="http://photocall.tv/"/>
 
 <!DOCTYPE html>
 <html>
@@ -13,9 +13,7 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script type="text/javascript">
-if(top.location!=this.location) top.location=this.location;
-</script>
+
 </head>
 
 <body>
