--- a/PHTBASE.html
+++ b/PHTBASE.html
@@ -1,4 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="description" content="Disfruta, en directo y online, de la emisión de tus canales favoritos.">
+<meta name="keywords" content="television tele tv online canal canales channel channels zapping radio">
+<meta name="theme-color" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<title>PHOTOCALL.TV - Televisión y radio online</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" href="http://photocall.tv/css/style.css">
+<script src="http://photocall.tv/js/jquery.min.js"></script>
+<script src="http://photocall.tv/js/bootstrap.min.js"></script>
 <style>
 *, *:before, *:after {
 	box-sizing: border-box;
@@ -123,7 +135,8 @@ input:checked + label {
 	display:block
 }
 </style> 
-
+</head>
+	<body>
 
 <input class="tab" id="tab1" type="radio" name="tabs" checked>
 <label for="tab1">NACIONAL</label>
