--- a/PAGETV.html
+++ b/PAGETV.html
@@ -4091,25 +4091,7 @@ input:checked + label {
 
 </div></section>
 
-<script id="cid0020000217836752813" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 256px;height: 386px;">{"handle":"photocall","arch":"js","styles":{"a":"707070","b":100,"c":"FFFFFF","d":"FFFFFF","k":"707070","l":"707070","m":"707070","n":"FFFFFF","p":"10","q":"707070","r":100,"usricon":1.3,"pos":"br","cv":1,"cvbg":"707070","cvw":74,"cvh":30}}</script>
-
-<script type="text/javascript"> var sc_project=11447090; var sc_invisible=1; var sc_security="a09b3304"; var scJsHost = (("https:" == document.location.protocol) ?
-"https://secure." : "http://www.");
-document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+ "statcounter.com/counter/counter.js'></"+"script>");
-</script>
-<noscript><div class="statcounter"><a title="free web stats"
-href="http://statcounter.com" target="_blank"><img class="statcounter"
-src="//c.statcounter.com/11447090/0/a09b3304/1/" alt="free web stats"></a></div></noscript>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-97108985-1', 'auto');
-  ga('send', 'pageview');
-</script>
+<DIV>
 
 </body>
 	
