--- a/PAGETV.html
+++ b/PAGETV.html
@@ -9,8 +9,7 @@
 <title>PHOTOCALL.TV - Televisión y radio online</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="http://photocall.tv/css/style.css">
-<script src="http://photocall.tv/js/jquery.min.js"></script>
-<script src="http://photocall.tv/js/bootstrap.min.js"></script>
+<DIV id="TV">
 <style>
 *, *:before, *:after {
 	box-sizing: border-box;
